@@ -19,6 +19,8 @@
 	-----
 
 =========================
+08/21
+	* Added delay to HLIF_AVOID [Toms]
 08/20
 	* Fixed Fling not reducing DEF for 30 seconds [Playtester]
 	* Updates Zeny givers (Red Pouch) [Lupus]
